src/main/resources/static/style.css
body {
    --accent-color: #168a16;
    --accent-color-light-1: color-mix(in oklab, var(--accent-color), white 10%);
    --background-color: #ffffff;
    --footer-color: color-mix(in oklab, var(--background-color), black 10%);
    --text-color: #000000;
    --nav-text-color: #ffffff;

    font-family: sans-serif;
    background-color: var(--background-color);

    display: grid;
    grid-template-rows: auto 1fr auto;
    min-height: 100vh;
}

.main-header {
    background-color: var(--accent-color);
    color: var(--nav-text-color);
    min-height: 50px;
    position: relative;
}

.primary-nav {
    display: flex;
    justify-content: center;

    > a {
        padding: 1rem;
        color: var(--nav-text-color);
        text-decoration: none;
        width: max-content;

        &:hover, &:focus-visible {
            background-color: var(--accent-color-light-1);
            outline: none;
        }
    }
}

#nav-toggle {
    display: none;
    height: 100%;
    width: auto;
    aspect-ratio: 1;
    margin: 0 0 0 auto;
    appearance: none;
    background-image: url("/icons/list.svg");
    background-size: contain;
}

@media screen and (width < 600px) {
    .primary-nav {
        display: none;
        position: absolute;
        top: 100%;
        right: 0;

        background-color: var(--accent-color);
        flex-direction: column;
    }

    :has(#nav-toggle:checked) .primary-nav {
        display: flex;
    }

    #nav-toggle {
        display: block;
    }
}

.content-wrapper {
    max-width: 1000px;
    width: 100%;
    justify-self: center;
    padding-inline: 1rem;
}

.main-footer {
    background-color: var(--footer-color);
    margin-top: 2rem;
    padding-block: 1rem;

    > .content-wrapper {
        text-align: center;
    }

    .footer-links {
        margin-top: 1rem;
    }
}

.url-output {
    border: thin solid black;
    word-break: break-all;
    max-height: 10em;
    overflow: auto;
}

